<resources>
    <string name="app_name">AndroidStudioProject</string>
    <string name="btn_hello">AndroidStudioProject</string>
    <string name="value">Value\n</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="del">del</string>
    <string name="persent">%</string>
    <string name="unmul">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mul">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="dis">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="revers">rev</string>
    <string name="_0btn">0</string>
    <string name="dot">.</string>
    <string name="eq">=</string>
    <string name="enter_number">Enter number</string>
    <string name="result">Result</string>
</resources>